<resources>
    <string name="app_name">PC Status</string>

    <string name="title_activity_settings">Settings</string>

    <string name="nothing_to_show">Nothing to show</string>

    <!--  Main Menu  -->
    <string name="main_menu_item_settings">Settings</string>
    <string name="main_menu_item_logout">Logout</string>

    <!--  Client  -->
    <string name="client_invalid_url">Invalid URL. Please check settings.</string>
    <string name="client_invalid_credentials">Invalid credentials.</string>
    <string name="client_unknown_error">Unknown error.</string>
    <string name="client_token_name_change_please_logout">Device name change: please re-login.</string>

    <!--  Preferences  -->
    <string name="prefs_server_header">Server</string>
    <string name="prefs_server_url_title">Server address</string>
    <string name="prefs_update_refresh_interval">Interval between update requests [s]</string>
    <string name="prefs_token_name">Device name</string>
    <string name="prefs_show_filters">Show filters</string>

    <!--  Login  -->
    <string name="title_activity_login">Login</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
</resources>
