<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/prefs_server_header">

        <EditTextPreference
            app:key="server_url"
            app:title="@string/prefs_server_url_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="10"
            app:key="update_refresh_interval"
            app:title="@string/prefs_update_refresh_interval"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="android_client"
            app:key="token_name"
            app:title="@string/prefs_token_name"
            app:useSimpleSummaryProvider="true" />

        <CheckBoxPreference
            app:defaultValue="false"
            android:key="show_filters"
            android:title="@string/prefs_show_filters"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>